--- a/index.html
+++ b/index.html
@@ -39,22 +39,20 @@
                 <div class="sidebar-item">
                     <i class="fa-regular fa-user fa-xl"></i>Profile
                 </div>
-                <button>Tweet</button>
             </div>
         </div>
         <main>
             <div class="create-tweet">
                 <img src="images/profilePick.jpg" alt="profile picture" class="icon">
                 <div>
-                    <textarea placeholder="What's happening?" id="tweet-input" class=""></textarea>
-                    <button class="tweet-btn">Tweet</button>
+                    <textarea placeholder="What's happening?" id="tweet-input"></textarea>
+                    <button id="tweet-btn" class="tweet-btn">Tweet</button>
                 </div>
             </div>
             <div id="feed">
             </div>
         </main>
-        <div class="sidebar right">
-        </div>
+        <div class="sidebar right"></div>
         <script src="index.js" type="module" async defer></script>
     </body>     
 </html>
